fixed issues of alignment when select qubely full width

--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -8,9 +8,6 @@
 /**
 * Effect 3
 */
-.premium-button__wrap {
-  text-align: center; }
-
 .premium-button {
   display: inline-flex;
   position: relative;
@@ -357,9 +354,6 @@
 /**
 * Effect 3
 */
-.premium-button__wrap {
-  text-align: center; }
-
 .premium-button {
   display: inline-flex;
   position: relative;
