--- a/src/blocks/dual-heading/style.scss
+++ b/src/blocks/dual-heading/style.scss
@@ -41,7 +41,7 @@
 }
 
 .premium-dheading-block__container {
-    text-align: center;
+    // text-align: center;
 
     .premium-dheading-block__title {
         position: relative;
